--- a/index.html
+++ b/index.html
@@ -44,15 +44,17 @@
     </div>
 </nav>
 -->
-<div class="row">
-    <div class="col-xs-4 gauge-speed" id="gauge-speed">88</div>
-    <div class="col-xs-8">
-        <div class="row">
-            <div class="col-xs-4">
-                <div class="btn btn-default" id="testThis">test</div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-6 gauge-speed" id="gauge-speed">88</div>
+        <div class="col-xs-6">
+            <div class="row">
+                <div class="col-xs-4">
+                    <div class="btn btn-default" id="testThis">test</div>
+                </div>
+                <div class="col-xs-4"></div>
+                <div class="col-xs-4 text-right" id="dateTime"></div>
             </div>
-            <div class="col-xs-4"></div>
-            <div class="col-xs-4 text-right" id="dateTime"></div>
         </div>
     </div>
 </div>
