--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Custom styles for this template -->
     <link href="assets/css/pedalmaster.css" rel="stylesheet">
+    <link href="assets/css/pedalmaster-dark.css" rel="stylesheet" id="dark-css">
 </head>
 
 <body>
