--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
     </div>
 </nav>
 -->
-<table width="100%">
+<table width="100%" border="">
     <tr>
-        <td id="gauge-speed" class="gauge-speed">00</td>
-        <td>
+        <td id="gauge-speed" class="gauge-speed" width="250px">00</td>
+        <td valign="top" class="text-center">
             <div id="dateTime"></div>
         </td>
-        <td>
-            <div class="btn btn-default" id="testThis">BW</div>
+        <td valign="top" class="text-right">
+            <div class="btn btn-default" id="testThis">BW</div><br />
             <div class="btn btn-default" id="closeThis">CC</div>
 
         </td>
