--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 </nav>
 -->
-<table width="100%" border="">
+<table width="100%">
     <tr>
         <td id="gauge-speed" class="gauge-speed" width="250px">00</td>
         <td valign="top" class="text-center">
