--- a/index.html
+++ b/index.html
@@ -21,40 +21,19 @@
 
 <body>
 
-<!--
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div><!--/.nav-collapse -->
-<!--
-    </div>
-</nav>
--->
 <table width="100%">
     <tr>
-        <td id="gauge-speed" class="gauge-speed" width="250px">00</td>
+        <td id="gauge-speed" class="gauge-speed" width="250px">
+            00
+        </td>
         <td valign="top" class="text-center">
             <div id="dateTime"></div>
         </td>
         <td valign="top" class="text-right">
-            <div class="btn btn-default" id="testThis">BW</div><br />
-            <div class="btn btn-default" id="closeThis">CC</div>
-
+            <div class="btn btn-default glyphicon glyphicon-asterisk" id="testThis"></div>
+            <br/>
+            <div class="btn btn-default glyphicon glyphicon-log-out" id="closeThis"></div>
+            <br />
         </td>
     </tr>
 </table>
