--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="QuillPedalPi">
+    <meta name="author" content="elkuku">
     <link rel="icon" href="assets/img/bicycle-18072/favicon.ico">
 
-    <title>PedalMaster</title>
+    <title>QuillPedalPi</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="assets/css/pedalmaster.css" rel="stylesheet">
-    <link href="assets/css/pedalmaster-dark.css" rel="stylesheet" id="dark-css">
+    <link href="assets/css/quillpedalpi.css" rel="stylesheet">
+    <link href="assets/css/quillpedalpi-dark.css" rel="stylesheet" id="dark-css">
 </head>
 
 <body>
@@ -40,7 +40,7 @@
 
 <script src="assets/vendor/jquery/dist/jquery.min.js"></script>
 <script src="assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="assets/js/pedalmaster.js"></script>
+<script src="assets/js/quillpedalpi.js"></script>
 </body>
 </html>
 
