--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 
 <table width="100%">
     <tr>
+        <td colspan="3">
+            <hr />
+        </td>
+    </tr>
+    <tr>
         <td id="gauge-speed" class="gauge-speed" width="250px">
             00
         </td>
@@ -34,6 +39,11 @@
             <br/>
             <div class="btn btn-default glyphicon glyphicon-log-out" id="closeThis"></div>
             <br />
+        </td>
+    </tr>
+    <tr>
+        <td colspan="3">
+            <hr />
         </td>
     </tr>
 </table>
