--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <table width="100%">
     <tr>
         <td colspan="3">
-            <hr />
+           123
         </td>
     </tr>
     <tr>
@@ -42,8 +42,8 @@
         </td>
     </tr>
     <tr>
-        <td colspan="3">
-            <hr />
+        <td colspan="3" class="text-right">
+            123
         </td>
     </tr>
 </table>
