--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-<table width="100%">
+<table width="100%" border="1">
     <tr>
         <td id="gauge-speed" class="gauge-speed" width="250px">
             00
