--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
 
 <table width="100%" border="1">
     <tr>
+        <td colspan="3" class="text-right">
+            123
+        </td>
+    </tr>
+    <tr>
         <td id="gauge-speed" class="gauge-speed" width="250px">
             00
         </td>
         <td valign="top" class="text-center">
-            <div id="dateTime"></div>
+            <div id="dateTime">00:00:00</div>
         </td>
         <td valign="top" class="text-right">
             <div class="btn btn-default glyphicon glyphicon-asterisk" id="testThis"></div>
