--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 
 <table width="100%" border="1">
     <tr>
-        <td colspan="3" class="text-right">
+        <td>
+            <div class="btn btn-default btn-lg glyphicon glyphicon-log-out" id="closeThis"></div>
+        </td>
+        <td colspan="2" class="text-right">
             123
         </td>
     </tr>
@@ -37,12 +40,15 @@
         <td valign="top" class="text-right">
             <div class="btn btn-default glyphicon glyphicon-asterisk" id="testThis"></div>
             <br/>
-            <div class="btn btn-default glyphicon glyphicon-log-out" id="closeThis"></div>
+
             <br />
         </td>
     </tr>
     <tr>
-        <td colspan="3" class="text-right">
+        <td>
+            <div class="btn btn-default btn-lg glyphicon glyphicon-log-out" id="closeThis"></div>
+        </td>
+        <td colspan="2" class="text-right">
             123
         </td>
     </tr>
