--- a/index.html
+++ b/index.html
@@ -26,30 +26,25 @@
         <td>
             <div class="btn btn-default btn-lg glyphicon glyphicon-log-out" id="closeThis"></div>
         </td>
-        <td colspan="2" class="text-right">
-            123
+        <td class="text-right">
+            <div class="btn btn-default btn-lg glyphicon glyphicon-asterisk" id="testThis"></div>
+
         </td>
     </tr>
     <tr>
-        <td id="gauge-speed" class="gauge-speed" width="250px">
+        <td id="gauge-speed" class="gauge-speed" width="230px">
             00
         </td>
         <td valign="top" class="text-center">
             <div id="dateTime">00:00:00</div>
         </td>
-        <td valign="top" class="text-right">
-            <div class="btn btn-default glyphicon glyphicon-asterisk" id="testThis"></div>
-            <br/>
-
-            <br />
-        </td>
     </tr>
     <tr>
         <td>
-            <div class="btn btn-default btn-lg glyphicon glyphicon-log-out" id="closeThis"></div>
+            <div class="btn btn-default btn-lg glyphicon glyphicon-alert" id="xx"></div>
         </td>
-        <td colspan="2" class="text-right">
-            123
+        <td class="text-right">
+            <div class="btn btn-default btn-lg glyphicon glyphicon-alert" id="yy"></div>
         </td>
     </tr>
 </table>
