--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-<table width="100%" border="1">
+<table width="100%" border="0">
     <tr>
         <td>
             <div class="btn btn-default btn-lg glyphicon glyphicon-log-out" id="closeThis"></div>
@@ -42,9 +42,13 @@
     <tr>
         <td>
             <div class="btn btn-default btn-lg glyphicon glyphicon-alert" id="xx"></div>
+            <div class="btn btn-default btn-lg glyphicon glyphicon-alert" id="xx1"></div>
+            <div class="btn btn-default btn-lg glyphicon glyphicon-alert" id="xx2"></div>
         </td>
         <td class="text-right">
             <div class="btn btn-default btn-lg glyphicon glyphicon-alert" id="yy"></div>
+            <div class="btn btn-default btn-lg glyphicon glyphicon-alert" id="yy1"></div>
+            <div class="btn btn-default btn-lg glyphicon glyphicon-alert" id="yy2"></div>
         </td>
     </tr>
 </table>
