Try another event

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </td>
     </tr>
     <tr>
-        <td id="gauge-speed" class="gauge-speed" width="230px" onclick="changeMode()" rowspan="2">
+        <td id="gauge-speed" class="gauge-speed" width="230px" onmousedown="changeMode()" rowspan="2">
             00
         </td>
         <td valign="top" class="text-center">
