--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <span id="dateTime">00:00:00</span>
             <div class="pull-right">
                 <div class="btn btn-default btn-lg glyphicon glyphicon-asterisk" id="testThis"></div>
+                <button type="button" class="btn btn-default btn-lg glyphicon glyphicon-wrench" data-toggle="modal" data-target="#myModal"></button>
                 <div class="btn btn-default btn-lg glyphicon glyphicon-log-out" id="closeThis"></div>
             </div>
         </td>
@@ -92,7 +93,26 @@
         </td>
     </tr>
 </table>
+<!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
 
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Modal Header</h4>
+            </div>
+            <div class="modal-body">
+                <p>Some text in the modal.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
+</div>
 <script src="assets/vendor/jquery/dist/jquery.min.js"></script>
 <script src="assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="assets/js/quillpedalpi.js"></script>
