--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                 <ul class="travel-list">
                     <li><span class="glyphicon glyphicon-ban-circle"></span> <span id="dig-avs">00.00</span> <span class="unit">km/h</span></li>
                     <li><span class="glyphicon glyphicon-ok-circle"></span> <span id="dig-mxs">00</span> <span class="unit">km/h</span></li>
-                    <li><span class="glyphicon glyphicon-send"></span> <span id="dig-dst">000.00</span> <span class="unit">km</span></li>
+                    <li><span class="glyphicon glyphicon-send"></span> <span id="dig-dst">000.000</span> <span class="unit">km</span></li>
+                    <li><span class="glyphicon glyphicon-heart"></span> <span id="dig-bpm">00.00</span> <span class="unit">Bpm</span></li>
                 </ul>
             </div>
             <div id="panel-Stopw">
