--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
             </div>
         </td>
     </tr>
+    <tr>
+        <td colspan="3">
+            <canvas id="speed-chart" width="480" height="50"></canvas>
+        </td>
+    </tr>
 </table>
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
@@ -115,6 +120,7 @@
 </div>
 <script src="assets/vendor/jquery/dist/jquery.min.js"></script>
 <script src="assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="assets/vendor/smoothie/smoothie.js"></script>
 <script src="assets/js/quillpedalpi.js"></script>
 <script src="assets/js/stopwatch.js"></script>
 </body>
