--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
                     <li><span class="glyphicon glyphicon-ban-circle"></span> <span id="dig-avs">00.00</span> <span class="unit">km/h</span></li>
                     <li><span class="glyphicon glyphicon-ok-circle"></span> <span id="dig-mxs">00</span> <span class="unit">km/h</span></li>
                     <li><span class="glyphicon glyphicon-send"></span> <span id="dig-dst">000.000</span> <span class="unit">km</span></li>
-                    <li><span class="glyphicon glyphicon-heart"></span> <span id="dig-bpm">00.00</span> <span class="unit">Bpm</span></li>
+                    <li><span class="glyphicon glyphicon-heart" id="icon-bpm"></span> <span id="dig-bpm">00.00</span> <span class="unit">Bpm</span></li>
                 </ul>
+                <canvas id="heartbeat-chart" width="250" height="30"></canvas>
             </div>
             <div id="panel-Stopw">
                 <table width="100%" border="0">
@@ -110,6 +111,7 @@
             </div>
             <div class="modal-body">
                 <p>Some text in the modal.</p>
+                <p class="version">Version: <span id="dig-version"></span></p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
