--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="QuillPedalPi">
     <meta name="author" content="elkuku">
-    <link rel="icon" href="assets/img/bicycle-18072/favicon.ico">
+    <link rel="icon" href="assets/img/favicon.ico">
 
     <title>QuillPedalPi</title>
 
