--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+<span id="flashMessage"></span>
 
 <table width="100%" border="0">
     <tr>
@@ -114,10 +115,15 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Modal Header</h4>
+                <h4 class="modal-title">ConfiX</h4>
             </div>
             <div class="modal-body">
-                <p>Some text in the modal.</p>
+                <p>
+                    <input type="checkbox" id="chkDemo" onchange="qpp.demo = this.checked;">
+                    <label for="chkDemo">Demo</label>
+                    <input type="checkbox" id="chkLight" onchange="document.getElementById('dark-css').disabled = this.checked;">
+                    <label for="chkLight">Light</label>
+                </p>
                 <p class="version">Version: <span id="dig-version"></span></p>
             </div>
             <div class="modal-footer">
@@ -137,6 +143,7 @@
 <script>
     let qpp = new QuillPedalPi(
         ['Travel', 'Stopw', 'Cam', 'Map'],
+        $('#flashMessage'),
         $('#dateTime'),
         $('#gauge-speed'),
         $('#dig-avs'),
